# supreme-rotary-phone

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  config.yaml.example
docker/: test.sh
docker/build-testing/fedora/: docker-compose.yml
docker/build-testing/ubuntu/: docker-compose.yml
docs/: AudioProcessingOrchestrator.md  DatabaseService.md  FasterWhisperTranscriptionService.md  FileMonitorService.md  MP3TaggingService.md  NotificationService.md  UploadService.md
include/: AudioProcessingOrchestrator.h  CustomFormatter.h  DatabaseService.h  FasterWhisperTranscriptionService.h  FileMonitorService.h  MP3TaggingService.h  NotificationService.h  UploadService.h
scripts/: FasterWhisper.py
src/: AudioProcessingOrchestrator.cpp  DatabaseService.cpp  FasterWhisperTranscriptionService.cpp  FileMonitorService.cpp  MP3TaggingService.cpp  NotificationService.cpp  UploadService.cpp
tests/DatabaseService/: DatabaseService.cpp  InitializeDatabase.cpp  InsertRecord.cpp
